# ConsoleMusicPlayer

./: .gitignore  CMakeLists.txt  CMakePresets.json  MusicPlayer.sln  README.md
MusicPlayer/: CMakeLists.txt  Common.h  Console.h  Lyrics.h  Main.cpp  MusicPlayer.rc  MusicPlayer.vcxproj  MusicPlayer.vcxproj.filters  Player.h  WinVersionHelper.cpp  resource.h
